# rzip

./: README.md  pyproject.toml
src/reproducible_zip/: __init__.py  __main__.py  zipinfo.py
src/rzip/: __main__.py  zipinfo.py
