[project]
name = "rzip"
version = "0.1.0"
description = "Reproducible ZipFile (supports shutil.archive)"
readme = "README.md"
authors = [
    { name = "Sean Summers", email = "165854+seansummers@users.noreply.github.com" }
]
requires-python = ">=3.7"
dependencies = []

[project.scripts]
rzip = "rzip:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
